--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -233,30 +233,27 @@ Configuration files can be directly referenced via \fBapprise\fR when referencin
 .
 .nf
 
-~/\.apprise
-~/\.apprise\.yml
+~/\.apprise\.conf
 ~/\.apprise\.yaml
-~/\.config/apprise
-~/\.config/apprise\.yml
+~/\.config/apprise\.conf
 ~/\.config/apprise\.yaml
 
-~/\.apprise/apprise
-~/\.apprise/apprise\.yml
+~/\.apprise/apprise\.conf
 ~/\.apprise/apprise\.yaml
-~/\.config/apprise/apprise
-~/\.config/apprise/apprise\.yml
+~/\.config/apprise/apprise\.conf
 ~/\.config/apprise/apprise\.yaml
 
-/etc/apprise
-/etc/apprise\.yml
+/etc/apprise\.conf
 /etc/apprise\.yaml
-/etc/apprise/apprise
-/etc/apprise/apprise\.yml
+/etc/apprise/apprise\.conf
 /etc/apprise/apprise\.yaml
 .
 .fi
 .
 .IP "" 0
+.
+.P
+The \fBconfiguration files\fR specified above can also be identified with a \fB\.yml\fR extension or even just entirely removing the \fB\.conf\fR extension altogether\.
 .
 .P
 If a default configuration file is referenced in any way by the \fBapprise\fR tool, you no longer need to provide it a Service URL\. Usage of the \fBapprise\fR tool simplifies to:
