--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 1.7.4\n"
+"Project-Id-Version: apprise 1.7.5\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2024-03-09 16:41-0500\n"
+"POT-Creation-Date: 2024-03-30 09:59-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -273,6 +273,9 @@ msgid "Forced File Name"
 msgstr ""
 
 msgid "Forced Mime Type"
+msgstr ""
+
+msgid "Free-Mobile"
 msgstr ""
 
 msgid "From Email"
