--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 1.7.5\n"
+"Project-Id-Version: apprise 1.7.6\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2024-03-30 09:59-0400\n"
+"POT-Creation-Date: 2024-04-13 20:12-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -30,6 +30,9 @@ msgid "API Key"
 msgstr ""
 
 msgid "API Secret"
+msgstr ""
+
+msgid "API Token"
 msgstr ""
 
 msgid "Access Key"
@@ -101,9 +104,6 @@ msgstr ""
 msgid "Authentication Type"
 msgstr ""
 
-msgid "Authorization Token"
-msgstr ""
-
 msgid "Avatar Image"
 msgstr ""
 
@@ -147,6 +147,9 @@ msgid "Channel ID"
 msgstr ""
 
 msgid "Channels"
+msgstr ""
+
+msgid "Chantify"
 msgstr ""
 
 msgid "Class"
@@ -252,6 +255,9 @@ msgid "Expire"
 msgstr ""
 
 msgid "Facility"
+msgstr ""
+
+msgid "Feishu"
 msgstr ""
 
 msgid "Fetch Method"
@@ -381,6 +387,9 @@ msgid "Long-Lived Access Token"
 msgstr ""
 
 msgid "MacOSX Notification"
+msgstr ""
+
+msgid "Markdown Version"
 msgstr ""
 
 msgid "Master Key"
@@ -515,6 +524,9 @@ msgid "Reply To"
 msgstr ""
 
 msgid "Reply To Email"
+msgstr ""
+
+msgid "Resend Delay"
 msgstr ""
 
 msgid "Resubmit Flag"
