cleaned up docs

--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -186,7 +186,7 @@ def my_wrapper(body, title, notify_type, *args, **kwargs):
 
      print("Define your custom code here")
 
-     # Returning True/False will relay your status back through Apprise\.
+     # Returning True/False will relay your status back through Apprise
      # Returning nothing (None by default) is always interpreted as True
      return True
 .fi
@@ -233,5 +233,7 @@ $ apprise \-vv \-\-title "Will Be Late Getting Home" \e
 .IP "" 0
 .SH "BUGS"
 If you find any bugs, please make them known at: \fIhttps://github\.com/caronc/apprise/issues\fR
+.SH "DONATIONS"
+If you found Apprise useful at all, \fIplease consider donating\fR!
 .SH "COPYRIGHT"
 Apprise is Copyright (C) 2024 Chris Caron \fIlead2gold@gmail\.com\fR
