--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,16 +6,16 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 1.9.2\n"
+"Project-Id-Version: apprise 1.9.3\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2025-01-08 21:02-0500\n"
+"POT-Creation-Date: 2025-03-30 15:32-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.16.0\n"
+"Generated-By: Babel 2.17.0\n"
 
 msgid "A local Gnome environment is required."
 msgstr ""
@@ -390,6 +390,9 @@ msgid "Is Spoiler"
 msgstr ""
 
 msgid "Kind"
+msgstr ""
+
+msgid "Label"
 msgstr ""
 
 msgid "Language"
