--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -1,6 +1,6 @@
 .\" generated with Ronn-NG/v0.10.1
 .\" http://github.com/apjanke/ronn-ng/tree/0.10.1
-.TH "APPRISE" "1" "September 2025" "Chris Caron <lead2gold@gmail.com>"
+.TH "APPRISE" "1" "January 2026" "Chris Caron <lead2gold@gmail.com>"
 .SH "NAME"
 \fBapprise\fR \- Push Notifications that work with just about every platform!
 .SH "SYNOPSIS"
@@ -81,7 +81,7 @@ Persistent storage by default writes to the following location unless the enviro
 .fi
 .IP "" 0
 .P
-To utilize the persistent storage \fIhttps://github\.com/caronc/apprise/wiki/persistent_storage\fR element associated with Apprise, simply specify the keyword \fBstorage\fR
+To utilize the persistent storage \fIhttps://appriseit\.com/getting\-started/persistent\-storage/\fR element associated with Apprise, simply specify the keyword \fBstorage\fR
 .IP "" 4
 .nf
 $ apprise storage
@@ -107,7 +107,7 @@ The \fBstorage\fR action has the following sub actions:
 \fB3\fR if there was one or more Apprise Service URLs successfully loaded but none could be notified due to user filtering (via tags)\.
 .IP "" 0
 .SH "SERVICE URLS"
-There are to many service URL and combinations to list here\. It's best to visit the Apprise GitHub page \fIhttps://github\.com/caronc/apprise/wiki#notification\-services\fR and see what's available\.
+There are to many service URL and combinations to list here\. It's best to visit the Apprise GitHub page \fIhttps://appriseit\.com/services/\fR and see what's available\.
 .P
 The \fBenvironment variable\fR of \fBAPPRISE_URLS\fR (comma/space delimited) can be specified to provide the default set of URLs you wish to notify if none are otherwise specified\.
 .SH "EXAMPLES"
@@ -205,7 +205,7 @@ def my_wrapper(body, title, notify_type, *args, **kwargs):
 .fi
 .IP "" 0
 .SH "CONFIGURATION"
-A configuration file can be in the format of either \fBTEXT\fR or \fBYAML\fR where TEXT \fIhttps://github\.com/caronc/apprise/wiki/config_text\fR is the easiest and most ideal solution for most users\. However YAML \fIhttps://github\.com/caronc/apprise/wiki/config_yaml\fR configuration files grants the user a bit more leverage and access to some of the internal features of Apprise\. Reguardless of which format you choose, both provide the users the ability to leverage \fBtagging\fR which adds a more rich and powerful notification environment\.
+A configuration file can be in the format of either \fBTEXT\fR or \fBYAML\fR where TEXT \fIhttps://appriseit\.com/config/text/\fR is the easiest and most ideal solution for most users\. However YAML \fIhttps://appriseit\.com/config/yaml/\fR configuration files grants the user a bit more leverage and access to some of the internal features of Apprise\. Reguardless of which format you choose, both provide the users the ability to leverage \fBtagging\fR which adds a more rich and powerful notification environment\.
 .P
 Configuration files can be directly referenced via \fBapprise\fR when referencing the \fB\-\-config=\fR (\fB\-c\fR) CLI directive\. You can identify as many as you like on the command line and all of them will be loaded\. You can also point your configuration to a cloud location (by referencing \fBhttp://\fR or \fBhttps://\fR\. By default \fBapprise\fR looks in the following local locations for configuration files and loads them:
 .IP "" 4
@@ -238,7 +238,7 @@ $ apprise \-vv \-t "my title" \-b "my notification body"
 .fi
 .IP "" 0
 .P
-If you leveraged tagging \fIhttps://github\.com/caronc/apprise/wiki/CLI_Usage#label\-leverage\-tagging\fR, you can define all of Apprise Service URLs in your configuration that you want and only specifically notify a subset of them:
+If you leveraged tagging \fIhttps://appriseit\.com/guides/#leverage\-tagging\fR, you can define all of Apprise Service URLs in your configuration that you want and only specifically notify a subset of them:
 .IP "" 4
 .nf
 $ apprise \-vv \-\-title "Will Be Late Getting Home" \e
@@ -257,6 +257,6 @@ $ apprise \-vv \-\-title "Will Be Late Getting Home" \e
 .SH "BUGS"
 If you find any bugs, please make them known at: \fIhttps://github\.com/caronc/apprise/issues\fR
 .SH "DONATIONS"
-If you found Apprise useful at all, \fIplease consider donating\fR!
+If you found Apprise useful at all, please consider sponsoring \fIhttps://github\.com/sponsors/caronc\fR or donating \fIhttps://www\.paypal\.com/cgi\-bin/webscr?cmd=_s\-xclick&hosted_button_id=MHANV39UZNQ5E\fR!
 .SH "COPYRIGHT"
 Apprise is Copyright (C) 2025 Chris Caron \fIlead2gold@gmail\.com\fR
