--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -26,7 +26,7 @@ The Apprise options are as follows:
 .P
 \fB\-b\fR, \fB\-\-body=\fR\fIVALUE\fR: Specify the message body\. If no body is specified then content is read from \fIstdin\fR\.
 .P
-\fB\-t\fR, \fB\-\-title=\fR\fIVALUE\fR: Specify the message title\. This field is complete optional\.
+\fB\-t\fR, \fB\-\-title=\fR\fIVALUE\fR: Specify the message title\. This field is completely optional\.
 .P
 \fB\-c\fR, \fB\-\-config=\fR\fICONFIG\-URL\fR: Specify one or more configuration locations\.
 .P
@@ -34,7 +34,7 @@ The Apprise options are as follows:
 .P
 \fB\-P\fR, \fB\-\-plugin\-path=\fR\fIPATH\fR: Specify a path to scan for custom notification plugin support\. You can create your own notification by simply creating a Python file that contains the \fB@notify("schema")\fR decorator\.
 .P
-You can optioanly chose to specify more then one \fB\-\-plugin\-path\fR (\fB\-P\fR) to increase the modules included\.
+You can optionally choose to specify more than one \fB\-\-plugin\-path\fR (\fB\-P\fR) to increase the modules included\.
 .P
 \fB\-n\fR, \fB\-\-notification\-type=\fR\fIVALUE\fR: Specify the message type (default=info)\. Possible values are "info", "success", "failure", and "warning"\.
 .P
@@ -42,27 +42,34 @@ You can optioanly chose to specify more then one \fB\-\-plugin\-path\fR (\fB\-P\
 .P
 \fB\-T\fR, \fB\-\-theme=\fR\fIVALUE\fR: Specify the default theme\.
 .P
-\fB\-g\fR, \fB\-\-tag=\fR\fIVALUE\fR: Specify one or more tags to filter which services to notify\. Use multiple \fB\-\-tag\fR (\fB\-g\fR) entries to \fBOR\fR the tags together and comma separated to \fBAND\fR them\. If no tags are specified then all services are notified\.
+\fB\-g\fR, \fB\-\-tag=\fR\fIVALUE\fR: Specify one or more tags to filter which services to notify:
+.IP "\(bu" 4
+\fB\-g "tagA" \-g "tagB"\fR: Match tagA \fBOR\fR tagB (Union)\.
+.IP "\(bu" 4
+\fB\-g "tagA,tagB"\fR: Match tagA \fBAND\fR tagB (Strict)\.
+.IP "\(bu" 4
+\fB\-g "all"\fR: Notify \fBALL\fR services\.
+.IP "\(bu" 4
+\fB(Omitted)\fR: Notify \fBuntagged\fR services only\.
+.IP "" 0
 .P
 \fB\-Da\fR, \fB\-\-disable\-async\fR: Send notifications synchronously (one after the other) instead of all at once\.
 .P
-\fB\-R\fR, \fB\-\-recursion\-depth\fR\fIINTEGER\fR: he number of recursive import entries that can be loaded from within Apprise configuration\. By default this is set to 1\. If this is set to zero, then import statements found in any configuration is ignored\.
+\fB\-R\fR, \fB\-\-recursion\-depth\fR\fIINTEGER\fR: The number of recursive import entries that can be loaded from within Apprise configuration\. By default this is set to 1\. If this is set to zero, then import statements found in any configuration is ignored\.
 .P
-\fB\-e\fR, \fB\-\-interpret\-escapes\fR Enable interpretation of backslash escapes\. For example, this would convert sequences such as \en and \er to their respected ascii new\-line and carriage
+\fB\-e\fR, \fB\-\-interpret\-escapes\fR Enable interpretation of backslash escapes\. For example, this would convert sequences such as \en and \er to their respected ascii new\-line and carriage return characters prior to the delivery of the notification\.
 .P
 \fB\-j\fR, \fB\-\-interpret\-emojis\fR Enable interpretation of emoji strings\. For example, this would convert sequences such as :smile: or :grin: to their respected unicode emoji character\.
 .P
 \fB\-S\fR, \fB\-\-storage\-path=\fR\fIPATH\fR: Specify the path to the persistent storage caching location
 .P
-\fB\-SM\fR, \fB\-\-storage\-mode=\fR\fIMODE\fR: Specify the persistent storage operational mode\. Possible values are "auto", "flush", and "memory"\. The default is "auto" not not specified\.
+\fB\-SM\fR, \fB\-\-storage\-mode=\fR\fIMODE\fR: Specify the persistent storage operational mode\. Possible values are "auto", "flush", and "memory"\. The default is "auto" if not specified\.
 .P
 \fB\-SPD\fR, \fB\-\-storage\-prune\-days=\fR\fIINTEGER\fR: Define the number of days the storage prune should run using\. Setting this to zero (0) will eliminate all accumulated content\. By default this value is 30 (days)\.
 .P
 \fB\-SUL\fR, \fB\-\-storage\-uid\-length=\fR\fIINTEGER\fR: Define the number of unique characters to store persistent cache in\. By default this value is 8 (characters)\.
 .P
 \fB\-d\fR, \fB\-\-dry\-run\fR: Perform a trial run but only prints the notification services to\-be triggered to \fBstdout\fR\. Notifications are never sent using this mode\.
-.P
-return characters prior to the delivery of the notification\.
 .P
 \fB\-l\fR, \fB\-\-details\fR Prints details about the current services supported by Apprise\.
 .P
@@ -74,7 +81,7 @@ return characters prior to the delivery of the notification\.
 .P
 \fB\-h\fR, \fB\-\-help\fR: Show this message and exit\.
 .SH "PERSISTENT STORAGE"
-Persistent storage by default writes to the following location unless the environment variable \fBAPPRISE_STORAGE_PATH\fR over\-rides it and/or \fB\-\-storage\-path\fR (\fB\-SP\fR) is specified to over\-ride it:
+Persistent storage by default writes to the following location unless the environment variable \fBAPPRISE_STORAGE_PATH\fR overrides it and/or \fB\-\-storage\-path\fR (\fB\-SP\fR) is specified to override it:
 .IP "" 4
 .nf
 ~/\.local/share/apprise/cache
@@ -92,9 +99,9 @@ The \fBstorage\fR action has the following sub actions:
 .P
 \fBlist\fR: List all of the detected persistent storage elements and their state (\fBstale\fR, \fBactive\fR, or \fBunused\fR)\. This is the default action if nothing further is identified\.
 .P
-\fBprune\fR: Removes all persistent storage that has not been referenced for more then 30 days\. You can optionally set the \fB\-\-storage\-prune\-days\fR to alter this default value\.
+\fBprune\fR: Removes all persistent storage that has not been referenced for more than 30 days\. You can optionally set the \fB\-\-storage\-prune\-days\fR to alter this default value\.
 .P
-\fBclean\fR: Removes all persistent storage reguardless of age\.
+\fBclean\fR: Removes all persistent storage regardless of age\.
 .SH "EXIT STATUS"
 \fBapprise\fR exits with a status of:
 .IP "\(bu" 4
@@ -107,7 +114,7 @@ The \fBstorage\fR action has the following sub actions:
 \fB3\fR if there was one or more Apprise Service URLs successfully loaded but none could be notified due to user filtering (via tags)\.
 .IP "" 0
 .SH "SERVICE URLS"
-There are to many service URL and combinations to list here\. It's best to visit the Apprise GitHub page \fIhttps://appriseit\.com/services/\fR and see what's available\.
+There are too many service URL and combinations to list here\. It's best to visit the Apprise GitHub page \fIhttps://appriseit\.com/services/\fR and see what's available\.
 .P
 The \fBenvironment variable\fR of \fBAPPRISE_URLS\fR (comma/space delimited) can be specified to provide the default set of URLs you wish to notify if none are otherwise specified\.
 .SH "EXAMPLES"
@@ -142,6 +149,26 @@ Load in a configuration file from a remote server that identifies all of your no
 $ apprise \-vv \-t "my title" \-b "my notification body" \e
    \-\-config=https://localhost/my/apprise/config \e
    \-t devops
+.fi
+.IP "" 0
+.P
+\fBTagging Logic Examples:\fR
+.P
+Notify any service tagged with "devops" OR "admin" (Union):
+.IP "" 4
+.nf
+$ apprise \-vv \-t "Union Test" \e
+   \-\-config=~/apprise\.yml \e
+   \-g devops \-g admin
+.fi
+.IP "" 0
+.P
+Notify only services tagged with BOTH "devops" AND "critical" (Intersection):
+.IP "" 4
+.nf
+$ apprise \-vv \-t "Intersection Test" \e
+   \-\-config=~/apprise\.yml \e
+   \-g devops,critical
 .fi
 .IP "" 0
 .P
@@ -205,7 +232,7 @@ def my_wrapper(body, title, notify_type, *args, **kwargs):
 .fi
 .IP "" 0
 .SH "CONFIGURATION"
-A configuration file can be in the format of either \fBTEXT\fR or \fBYAML\fR where TEXT \fIhttps://appriseit\.com/config/text/\fR is the easiest and most ideal solution for most users\. However YAML \fIhttps://appriseit\.com/config/yaml/\fR configuration files grants the user a bit more leverage and access to some of the internal features of Apprise\. Reguardless of which format you choose, both provide the users the ability to leverage \fBtagging\fR which adds a more rich and powerful notification environment\.
+A configuration file can be in the format of either \fBTEXT\fR or \fBYAML\fR where TEXT \fIhttps://appriseit\.com/config/text/\fR is the easiest and most ideal solution for most users\. However YAML \fIhttps://appriseit\.com/config/yaml/\fR configuration files grants the user a bit more leverage and access to some of the internal features of Apprise\. Regardless of which format you choose, both provide the users the ability to leverage \fBtagging\fR which adds a more rich and powerful notification environment\.
 .P
 Configuration files can be directly referenced via \fBapprise\fR when referencing the \fB\-\-config=\fR (\fB\-c\fR) CLI directive\. You can identify as many as you like on the command line and all of them will be loaded\. You can also point your configuration to a cloud location (by referencing \fBhttp://\fR or \fBhttps://\fR\. By default \fBapprise\fR looks in the following local locations for configuration files and loads them:
 .IP "" 4
@@ -247,13 +274,13 @@ $ apprise \-vv \-\-title "Will Be Late Getting Home" \e
 .fi
 .IP "" 0
 .SH "ENVIRONMENT VARIABLES"
-\fBAPPRISE_URLS\fR: Specify the default URLs to notify IF none are otherwise specified on the command line explicitly\. If the \fB\-\-config\fR (\fB\-c\fR) is specified, then this will over\-rides any reference to this variable\. Use white space and/or a comma (\fB,\fR) to delimit multiple entries\.
+\fBAPPRISE_URLS\fR: Specify the default URLs to notify IF none are otherwise specified on the command line explicitly\. If the \fB\-\-config\fR (\fB\-c\fR) is specified, then this will override any reference to this variable\. Use white space and/or a comma (\fB,\fR) to delimit multiple entries\.
 .P
-\fBAPPRISE_CONFIG_PATH\fR: Explicitly specify the config search path to use (over\-riding the default)\. Use a semi\-colon (\fB;\fR), line\-feed (\fB\en\fR), and/or carriage return (\fB\er\fR) to delimit multiple entries\.
+\fBAPPRISE_CONFIG_PATH\fR: Explicitly specify the config search path to use (overriding the default)\. Use a semi\-colon (\fB;\fR), line\-feed (\fB\en\fR), and/or carriage return (\fB\er\fR) to delimit multiple entries\.
 .P
-\fBAPPRISE_PLUGIN_PATH\fR: Explicitly specify the custom plugin search path to use (over\-riding the default)\. Use a semi\-colon (\fB;\fR), line\-feed (\fB\en\fR), and/or carriage return (\fB\er\fR) to delimit multiple entries\.
+\fBAPPRISE_PLUGIN_PATH\fR: Explicitly specify the custom plugin search path to use (overriding the default)\. Use a semi\-colon (\fB;\fR), line\-feed (\fB\en\fR), and/or carriage return (\fB\er\fR) to delimit multiple entries\.
 .P
-\fBAPPRISE_STORAGE_PATH\fR: Explicitly specify the persistent storage path to use (over\-riding the default)\.
+\fBAPPRISE_STORAGE_PATH\fR: Explicitly specify the persistent storage path to use (overriding the default)\.
 .SH "BUGS"
 If you find any bugs, please make them known at: \fIhttps://github\.com/caronc/apprise/issues\fR
 .SH "DONATIONS"
