updated PayPal details for Apprise donations

--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -284,6 +284,6 @@ $ apprise \-vv \-\-title "Will Be Late Getting Home" \e
 .SH "BUGS"
 If you find any bugs, please make them known at: \fIhttps://github\.com/caronc/apprise/issues\fR
 .SH "DONATIONS"
-If you found Apprise useful at all, please consider sponsoring \fIhttps://github\.com/sponsors/caronc\fR or donating \fIhttps://www\.paypal\.com/cgi\-bin/webscr?cmd=_s\-xclick&hosted_button_id=MHANV39UZNQ5E\fR!
+If you found Apprise useful at all, please consider sponsoring \fIhttps://github\.com/sponsors/caronc\fR or donating \fIhttps://www\.paypal\.com/donate/?hosted_button_id=CR6YF7KLQWQ5E\fR!
 .SH "COPYRIGHT"
 Apprise is Copyright (C) 2025 Chris Caron \fIlead2gold@gmail\.com\fR
